@@ -10,6 +10,7 @@ collections.
 ### Added
 
 - Added missing "Sturdy Saddle" horse armor from Vendor collection.
+- Added filter to show/hide collected items.
 
 ### Changed
 
